--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -220,3 +220,124 @@ and (max-device-width : 1440px)  {
 	padding-top: 5px;
 	font-size: 16px;
 }
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:700); 
+ #ted_navbar {
+  background: #000000;
+  width: auto;
+}
+#ted_navbar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  display: block;
+  zoom: 1;
+}
+#ted_navbar ul:after {
+  content: " ";
+  display: block;
+  font-size: 0;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+#ted_navbar ul li {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+}
+#ted_navbar.align-right ul li {
+  float: right;
+}
+#ted_navbar.align-center ul {
+  text-align: center;
+}
+#ted_navbar ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  padding: 15px 25px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 14px;
+  position: relative;
+  -webkit-transition: color .25s;
+  -moz-transition: color .25s;
+  -ms-transition: color .25s;
+  -o-transition: color .25s;
+  transition: color .25s;
+}
+#ted_navbar ul li a:hover {
+  color: #333333;
+}
+#ted_navbar ul li a:hover:before {
+  width: 100%;
+}
+#ted_navbar ul li a:after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: -3px;
+  top: 19px;
+  height: 6px;
+  width: 6px;
+  background: #ffffff;
+  opacity: .5;
+}
+#ted_navbar ul li a:before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 0;
+  background: #333333;
+  -webkit-transition: width .25s;
+  -moz-transition: width .25s;
+  -ms-transition: width .25s;
+  -o-transition: width .25s;
+  transition: width .25s;
+}
+#ted_navbar ul li.last > a:after,
+#ted_navbar ul li:last-child > a:after {
+  display: none;
+}
+#ted_navbar ul li.active a {
+  color: #333333;
+}
+#ted_navbar ul li.active a:before {
+  width: 100%;
+}
+#ted_navbar.align-right li.last > a:after,
+#ted_navbar.align-right li:last-child > a:after {
+  display: block;
+}
+#ted_navbar.align-right li:first-child a:after {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  #ted_navbar ul li {
+    float: none;
+    display: block;
+  }
+  #ted_navbar ul li a {
+    width: 100%;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border-bottom: 1px solid #fb998c;
+  }
+  #ted_navbar ul li.last > a,
+  #ted_navbar ul li:last-child > a {
+    border: 0;
+  }
+  #ted_navbar ul li a:after {
+    display: none;
+  }
+  #ted_navbar ul li a:before {
+    display: none;
+  }
+}
