--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -238,3 +238,16 @@
   margin-right: 40px;
   margin-top: 100px;
 }
+.ted-nav{
+  border-radius: 30px;
+  margin-top: 5vh;
+  text-align: left;
+  background: transparent;
+
+}
+.head{
+  position: relative;
+  transform: translateX(-50%);
+  left:50%;
+  top:50%;
+}
