--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -4,52 +4,46 @@
 
  body {
    background-color: black;
-	 	overflow:hidden;
+    overflow:hidden;
  }
 
  * {
    color: black;
-   font-family: 'Futura';
+   font-family: 'Futura',sans-serif;
    src: url('assets/futura.ttf');
- }
-
- #timer {
-   position: absolute;
-   display: inline-block;
-   text-align: center;
-   font-size: 1.85vw;
-   margin-top: 180px;
-	 margin-left: 34%;
  }
 
  #clockdiv {
    font-family: sans-serif;
-   display: inline-block;
+   position: relative;
+   top:25%;
+   margin:0 auto;
    font-weight: 100;
    text-align: center;
+   width: 400px;
    font-size: 30px;
  }
 
  #clockdiv>div {
    padding: 10px;
    border-radius: 3px;
-   background: #FF2B06;
+   background: transparent;
    display: inline-block;
  }
 
  #clockdiv div>span {
    padding: 15px;
    border-radius: 3px;
-   background: #FF2B06;
+   background: transparent;
    display: inline-block;
-	 color: #ffff;
+   color: #ffff;
  }
 
  .smalltext {
    padding-top: 5px;
    font-size: 16px;
    text-transform: uppercase;
-	 color: #ffff;
+   color: #ffff;
  }
 
  #particles-js {
@@ -60,7 +54,7 @@
    background-size: cover;
    background-position: 50% 50%;
    background-repeat: no-repeat;
-   position: absolute;
+   position: fixed;
    top: 0;
    left: 0;
  }
@@ -84,41 +78,91 @@
    font-size: 50px;
    letter-spacing: 3px;
  }
- #navbar{
- 	opacity: .9;
- 	position: fixed;
-  margin-right: 5px;
-  margin-top: 2vw;
-  background-color: #FF2B06;
-  color: white;
-  height: 60px;
-  width: 100%;
-  text-align: center;
- }
 
- .navContent{
- 	font-size:28px;
- 	width: 180px;
-  opacity: 1;
-  color: white;
- 	transition: 0.2s;
- 	margin-left: 3vw;
- 	margin-right:2vw;
- 	letter-spacing: 5px;
- 	text-transform: uppercase;
-  padding-top: 40px;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-bottom: 32px;
- }.navContent:hover{
- 	transform: scale(1.1);
- 	transition: 0.2s;
-}
+
  a {
    color: #fff;
 }
+.ted-nav{
+  border-radius: 30px;
+  margin-top: 5vh;
+  background: transparent;
+  z-index: 10;
+}
+/* Responsiveness */
+@media only screen and (max-width:600px) and (min-width:400px){
+  .hero-text{
+    font-size: 25px;
+    text-align: center!important;
+  }.logo{
+    width: 250px!important;
+  }.head{
+    margin-left: -10!important;
+  }
+  .ted-nav{
+    background-color: black!important;
+  }#clockdiv{
+    display: flex;
+    background: transparent;
+    max-width: 100%;
+    text-align: center;
 
-/*  Team Page CSS begins here*/
+  }
+  #clockdiv > div{
+      padding: 0!important;
+      border-radius: 0px;
+      flex-grow: 1;
+      text-align: center;
+    }
+  .smalltext{
+      font-size: 15.0px!important;
+    }
+}
+
+@media only screen and (max-width:399px){
+  .logo{
+    width: 200px;
+  }
+  .ted-nav{
+    background-color: black!important;
+  } .hero-text{
+      font-size:30px;
+      text-align: center!important;
+  }#clockdiv{
+    display: flex;
+    background: transparent;
+    text-align: center;
+    max-width: 100%;
+  }
+  #clockdiv > div{
+      padding: 5px;
+      border-radius: 0px;
+      flex-grow:1;
+      text-align: center;
+    }
+  .smalltext{
+      font-size: 15.0px!important;
+    }
+#clockdiv *{
+    background: transparent;
+
+  }
+}
+.logo{
+  width: 200px;
+}
+.nav-link{
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+.collapse .navbar-collapse{
+  background: transparent;
+}
+.active{
+  font-weight: 700;
+  text-decoration:line-through;
+  color: #FF2B06!important;
+/*TeamPage*/
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 .snip1566 {
   position: relative;
@@ -228,49 +272,4 @@
   margin-left:40px;
   margin-right: 40px;
   margin-top: 100px;
-}
-.ted-nav{
-  border-radius: 30px;
-  margin-top: 5vh;
-  text-align: left;
-  background: transparent;
-	z-index: 10;
-}
-.head{
-  position: relative;
-  transform: translateX(-50%);
-  left:50%;
-  top:50%;
-}
-
-/* Responsiveness */
-@media only screen and (max-width:600px) and (min-width:400px){
-	.hero-text{
-		font-size: 25px;
-		text-align: center!important;
-	}.logo{
-		width: 250px!important;
-	}.head{
-		margin-left: -10!important;
-	}
-	.ted-nav{
-		background-color: black!important;
-	}
-}
-@media only screen and (max-width:399px){
-	.logo{
-		width: 200px;
-	}
-	.ted-nav{
-		background-color: black!important;
-	}
-}
-.logo{
-	width: 500px;
-}
-.nav-link{
-	text-transform: uppercase;
-}
-.collapse .navbar-collapse{
-	background: transparent;
 }
