Increase the size ;)

--- a/Assets/css/team.css
+++ b/Assets/css/team.css
@@ -2,6 +2,7 @@
 
 .center-align {
     text-align: center;
+    font-size: 16px;
 }
 
 #override .team {
@@ -89,6 +90,7 @@
 .center-justified {
   text-align: justify;
   margin: 0 15%;
+  font-size: 14px;
 }
 
 .team-header {
