Font and spacing of text

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -9,7 +9,7 @@
 
  * {
    color: black;
-   font-family: 'Futura',sans-serif;
+   font-family: "Arial", Helvetica, sans-serif
    src: url('assets/futura.ttf');
  }
 
