--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -160,7 +160,7 @@
 }
 .active{
   font-weight: 700;
-  text-decoration:line-through;
+  text-decoration: bold;
   color: #FF2B06!important;
 /*TeamPage*/
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
