--- a/Assets/css/sponsors.css
+++ b/Assets/css/sponsors.css
@@ -7,18 +7,19 @@ body{
 .grid{
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: space-around;
   z-index: 2147483638!important;
 }
-
+.row{
+  display: flex;
+  justify-content: space-evenly;
+}
 .item{
-  width: 15%;
+  width: 30%;
   transition: 0.5s all;
-  height: 100px;
-  background: white;
+  height: 150px;
+  background: transparent;
   margin-top: 100px;
-  border: 2px solid #FF2B06;
+  border: 2px solid white;
 }
 
 @media only screen and (max-width:500px){
@@ -28,10 +29,15 @@ body{
     width: 90%;
     text-align: center;
     margin:0 auto;
-    margin-top: 20px!important;
-    border:1px solid #FF2B06;
+    margin-top: 50px!important;
+    height: 100px;
+    background: transparent;
+    border:1px solid #fff;
   }*{
     overflow-y: scroll!important;
+  }.sponsorName{
+    transform: translateY(100%)!important;
+    color:white;
   }
 }
 
@@ -47,7 +53,8 @@ nav{
   font-size: 30px;
   transition: 0.5s all;
   position: relative;
-  transform: translateY(70%);
+  color: white;
+  transform: translateY(150%);
 }
 .banner{
   color:white;
@@ -61,6 +68,7 @@ nav{
   border-radius: 30px;
   height: 150px;
   border:none;
+  background-color: white;
 }
 .item:hover > .prompt{
   display: block;
@@ -68,9 +76,13 @@ nav{
   transition: opacity 0.5s;
   transition: 0.5s;
 }
+.item:hover >.sponsorName{
+  color:#FF2B06;
+}
 
 .prompt{
   display: none;
   opacity: 0;
-  margin-top: 50px;
+  margin-top: 60px;
+  color: #FF2B06;
 }
