--- a/Assets/css/speakers.css
+++ b/Assets/css/speakers.css
@@ -1,23 +1,18 @@
-
-#profile_1{
-  background: url('../images/speakers/ho.png');
-  background-size:cover;
-  opacity: 1!important;
-}
 .body{
   letter-spacing: 2px;
-
 }
+
 body{
   background: black!important;
   overflow-y: scroll;
 }
+
 .back{
   background: #FF2B06;
-
   width: 100%;
   height: 100%;
 }
+
 .profile_div{
   width: 50%;
   height: 50%;
@@ -25,43 +20,45 @@ body{
   float:left;
   text-align: center;
 }
+
 nav{
   margin-bottom: 20px;
 }
+
 @media only screen and (max-width:600px){
   .profile_div{
     float: none;
     width: 100%;
   }
 }
+
 .name{
   letter-spacing: 3px;
   text-transform: uppercase;
 }
-#profile_2, #profile_3{
+
+#profile_left, #profile_right{
   padding: 20px;
 }
-#profile_2 {
+
+#profile_right {
   background-color:black;
   color:white;
-
 }
-#profile_2 .body{
+
+#profile_right .body{
   color:white!important;
   font-size: 15px;
   text-align: right!important;
 }
-#profile_3{
+
+#profile_left{
   background-color: black;
   color: white;
 }
-#profile_3 .body{
+
+#profile_left .body{
   color:white!important;
   font-size: 15px;
   text-align: left!important;
-}
-#profile_4{
-  background: url('../images/speakers/kk.jpg');
-  background-size:cover;
-  opacity: 1!important;
 }
