--- a/Assets/css/speakers.css
+++ b/Assets/css/speakers.css
@@ -62,3 +62,16 @@ nav{
   font-size: 15px;
   text-align: left!important;
 }
+
+#particles-js {
+ width: 100%;
+ height: 100%;
+ background-color: black;
+ background-image: url('');
+ background-size: cover;
+ background-position: 50% 50%;
+ background-repeat: no-repeat;
+ position: fixed;
+ top: 0;
+ left: 0;
+}
