--- a/Assets/css/sponsors.css
+++ b/Assets/css/sponsors.css
@@ -93,3 +93,16 @@ nav{
   margin-top: 60px;
   color: #FF2B06;
 }
+
+#particles-js {
+ width: 100%;
+ height: 100%;
+ background-color: black;
+ background-image: url('');
+ background-size: cover;
+ background-position: 50% 50%;
+ background-repeat: no-repeat;
+ position: fixed;
+ top: 0;
+ left: 0;
+}
